[package]
name = "snap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]


[features]
default = ["fxhash"]
ahash = []
metrohash = []
fnv = []
std = []
fxhash = []

[profile.release]
debug = 1
lto = true
codegen-units = 1

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
fast_hilbert = "2.0.0"
flate2 = "1.0.22"
glob = "0.3.0"
rand = "0.8.5"
regex = "1.5.4"
tar = "0.4.37"

libc = "0.2.144"

procfs = "0.16"

#egui = "0.20.0"
image = { version = "0.24.5", default_features = false, features = ["png"] }
colorgrad = "0.6.2"
#egui_demo_lib = "0.20.0"
#eframe = "0.20.0"
imageproc = "0.23.0"
drill-press = "0.1.1"
rusttype = "0.9.3"
humansize = "2.1.3"
itertools = "0.10.5"
lenient_semver = "0.4.2"
oracle = "0.5.7"
users = "0.11.0"
stats_alloc = "0.1.10"
ahash = "0.8.3"
fnv = "1.0.7"
xxhash-rust = "0.8.6"
metrohash = "1.0.6"
rayon = "1.6.1"
indicatif = { version = "0.17.3", features = ["rayon"] }
env_logger = "0.10.0"
log = "0.4.17"
rustc-hash = "1.1.0"
anyhow = "1.0.69"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.95"
rustix = { version = "0.37.19", features = ["fs"] }
nix = { version = "0.26.2", features = ["fs"], default-features = false }
tabled = { version = "0.12.0" }
colored = "2.0.0"
#once_cell = "1.17.1"
