[package]
name = "snap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]


[features]

[profile.release]
debug = 1
lto = true
codegen-units = 1

[target.'cfg(windows)'.dependencies]

[target.'cfg(unix)'.dependencies]
libc = "0.2.144"
procfs = "0.17.0"
uzers = "0.11.0"


[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
fast_hilbert = "2.0.0"
flate2 = "1.0.22"
rand = "0.8.5"
regex = "1.5.4"
tar = "0.4.37"
procfs-core = { version = "0.17.0", features = ["serde1"] }
image = { version = "0.24.5", default-features = false, features = ["png"] }
colorgrad = "0.6.2"
imageproc = "0.23.0"
rusttype = "0.9.3"
humansize = "2.1.3"
itertools = "0.12"
oracle = "0.6.2"
ahash = "0.8.3"
fnv = "1.0.7"
rayon = "1.6.1"
indicatif = { version = "0.17.3", features = ["rayon"] }
env_logger = "0.10.0"
log = "0.4.17"
rustc-hash = "1.1.0"
anyhow = "1.0.69"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.95"
rustix = { version = "0.37.19", features = ["fs"] }
nix = { version = "0.26.2", features = ["fs"], default-features = false }
tabled = { version = "0.12.0" }
macroquad = { version = "0.4.14", default-features = false }
rmp-serde = "1.1.2"
rmp = "0.8.12"
#egui-macroquad = { git = "https://github.com/optozorax/egui-macroquad", default-features = false, rev = "733f19de97d9b9c76733f12819bb9427abbaa158" }
egui-macroquad = { version = "0.17", default-features = false }
egui_extras = "0.31.0"
