[package]
name = "snap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]


[features]

[profile.release]
debug = 1
lto = true
codegen-units = 1

[target.'cfg(windows)'.dependencies]

[target.'cfg(unix)'.dependencies]
libc = "0.2"
procfs = "0.18"
uzers = "0.12"


[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
fast_hilbert = "2.0.0"
flate2 = "1.0.22"
rand = "0.9"
regex = "1.5.4"
tar = "0.4.37"
procfs-core = { version = "0.18", features = ["serde1"] }
image = { version = "0.25", default-features = false, features = ["png"] }
colorgrad = { version = "0.8", default-features = false, features = ["preset"] }
imageproc = "0.25"
humansize = "2.1.3"
itertools = "0.14"
oracle = "0.6.2"
rustc-hash = "2.1"
rayon = "1.6.1"
indicatif = { version = "0.18", features = ["rayon"] }
env_logger = "0.11"
log = "0.4.17"
anyhow = "1.0.69"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.95"
rustix = { version = "1.1", features = ["fs"] }
nix = { version = "0.30", features = ["fs"], default-features = false }
tabled = { version = "0.20" }
macroquad = { version = "0.4.14", default-features = false }
rmp-serde = "1.1.2"
rmp = "0.8.12"
egui-macroquad = { version = "0.17", default-features = false }
egui_extras = "0.31.0"
ab_glyph = { version = "0.2.32", default-features = false }
